--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,9 +1,9 @@
 name: publish
 
-on
-  push
+on:
+  push:
     branches: [ "main" ]
-  pull_request
+  pull_request:
     branches: [ "main" ]
 
 jobs:
